# CourseWork

./: CMakeLists.txt  dictionary.txt
inc/: AvlDictionary.h
src/: main.cpp
